--- a/src/assets/scss/pages/_ourenterprises.scss
+++ b/src/assets/scss/pages/_ourenterprises.scss
@@ -3,7 +3,7 @@
 
 	.c-banner {
 		padding: 0 0 80px 0;
-		background: linear-gradient(to right, #2079bd, #1e91d2);
+		background: linear-gradient(to right, #0059c4, #000017);
 
 		@include is-max(400px) {
 			padding: 0 0 95px 0;
@@ -26,17 +26,45 @@
 	}
 
 	&__section_1 {
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #000017, #0059c4);
 		clip-path: polygon(0 3.8%, 100% 1%, 100% 101%, 0% 100%);
 		margin-top: -110px;
 		// padding-bottom: 101px;
 		padding-top: 162px;
+		position: relative;
 		// padding-bottom: 100px;
+		
 
 		@include is-sp {
 			padding-bottom: 0;
 			padding-top: 150px;
 			clip-path: polygon(0 1.34%, 100% 0.3%, 100% 101%, 0% 100%);
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 21%;
+			top: 0;
+			left: 0;
+			right: 0;
+			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 19%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+
+			@include is-sp {
+				clip-path: polygon(
+					50% 0%,
+					100% 0,
+					100% 86%,
+					66% 100%,
+					0% 48%,
+					0% 0%,
+					0% 0%
+				);
+				height: 3%;
+			}
 		}
 
 		.l-wrap {
@@ -85,7 +113,7 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #0059c4, #000017);
 		position: absolute;
 		top: 0;
 		right: 0%;
@@ -358,6 +386,21 @@
 				}
 
 				&:nth-child(3) {
+					@include is-sp {
+						display: flex;
+						flex-direction: column;
+
+						.heading03 {
+							order: 4;
+							padding-top: 15px;
+							padding-bottom: 0;
+						}
+
+						.oe__btns {
+							order: 5;
+						}
+					}
+
 					.info {
 						width: 87%;
 						background: linear-gradient(100deg,
@@ -384,6 +427,18 @@
 
 					@include is-sp {
 						padding-bottom: 72px;
+						display: flex;
+						flex-direction: column;
+
+						.heading03 {
+							order: 4;
+							padding-top: 15px;
+							padding-bottom: 0;
+						}
+
+						.oe__btns {
+							order: 5;
+						}
 					}
 
 					.info {
@@ -436,7 +491,7 @@
 				}
 
 				&02 {
-					color: $color-text04;
+					color: #9FC4E3;
 					font-family: century-gothic, sans-serif;
 					font-weight: 700;
 					letter-spacing: 0.2em;
@@ -460,6 +515,19 @@
 					font-size: 0.8125rem;
 					line-height: 2;
 
+					@include is-max(900px) {
+						br {
+							display: none;
+						}
+					}
+
+					@include is-max(760px) {
+						br {
+							display: block;
+						}
+					}
+
+
 					@include is-sp {
 						@include font-line(13.4);
 						letter-spacing: 0.08em;
@@ -482,16 +550,22 @@
 		}
 	}
 
+	.u-pt-30 {
+		@include is-sp {
+			padding-top: 52.5px !important;
+		}
+	}
+
 	&__bg_1 {
 		position: absolute;
 		top: -85px;
 		right: 47px;
-		width: 379px;
 
 		@include is-sp {
 			top: -105px;
 			right: 11px;
 			width: 179px;
+			opacity: 0.2;
 		}
 	}
 
@@ -515,13 +589,13 @@
 
 	&--btn {
 		background-color: #fff;
-		width: 45%;
-		color: #4988c8;
+		width: 65%;
+		color: #15377B;
 
 		@include is-sp {
 			height: 70px;
 			margin: 0;
-			width: 48%;
+			width: 100%;
 		}
 
 		.txt {
