--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -3,7 +3,7 @@
 
 	.c-banner {
 		padding: 0 0 100px 0;
-		background: linear-gradient(to right, #2079bd, #1e91d2);
+		background: linear-gradient(to right, #0059c4, #000017);
 
 		@include is-sp {
 			padding: 0 0 80px 0;
@@ -27,7 +27,6 @@
 
 					@include is-max(400px) {
 						font-size: 7vw;
-						;
 					}
 				}
 
@@ -43,7 +42,6 @@
 
 					@include is-max(400px) {
 						font-size: 3vw;
-						;
 					}
 				}
 			}
@@ -63,7 +61,7 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #0059c4, #000017);
 		position: absolute;
 		top: 0;
 		right: 0%;
@@ -81,7 +79,7 @@
 		margin-top: 100px;
 
 		@include is-sp {
-			margin-top: 105px;
+			margin-top: 95px;
 		}
 
 		.l-wrap {
@@ -96,6 +94,7 @@
 			@include is-sp {
 				right: 3%;
 				width: 176px;
+				display: none;
 			}
 		}
 
@@ -103,19 +102,30 @@
 			content: "";
 			position: absolute;
 			width: 100%;
-			top: -95px;
-			height: 100px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			clip-path: polygon(0 50%, 100% 0, 100% 100%, 0 100%);
-
+			height: 38%;
+			top: 0;
+			left: 0;
+			right: 0;
+			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 0%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
 			@include is-sp {
-				clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
+				clip-path: polygon(
+					50% 0%,
+					100% 0,
+					100% 86%,
+					66% 100%,
+					0% 48%,
+					0% 0%,
+					0% 0%
+				);
+				height: 3%;
 			}
 		}
 
 		&__center {
 			padding: 100px 0 160px 0;
-			background: linear-gradient(to right, #003782, #0059b6);
+			background: linear-gradient(to left, #0059c6, #000017);
 
 			@include is-max(750px) {
 				padding: 75px 0;
@@ -193,7 +203,6 @@
 			color: #fff;
 			letter-spacing: 0.2em;
 
-
 			@include is-sp {
 				@include font-line(13, 25);
 				text-align: center;
@@ -205,10 +214,10 @@
 			}
 
 			.br-sp {
-				display: none;
+				display: block;
 
 				@include is-sp {
-					display: block;
+					display: block !important;
 				}
 			}
 		}
@@ -328,7 +337,8 @@
 			}
 		}
 
-		.l-wrap {}
+		.l-wrap {
+		}
 
 		&__inner-realestate {
 			display: flex;
@@ -367,8 +377,6 @@
 					padding-right: unset;
 				}
 
-
-
 				.txt_ttl {
 					@include font-line(24, 30);
 					text-align: left;
@@ -379,7 +387,7 @@
 				}
 
 				.text {
-					font-family: yu-gothic-pr6n, sans-serif;;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -389,7 +397,7 @@
 					letter-spacing: 0.11em;
 					text-align: justify;
 
-					@include is-min(1024px){
+					@include is-min(1024px) {
 						padding-bottom: 30px;
 					}
 
@@ -441,7 +449,8 @@
 				}
 			}
 
-			&--right {}
+			&--right {
+			}
 		}
 	}
 
@@ -490,7 +499,8 @@
 			}
 		}
 
-		.l-wrap {}
+		.l-wrap {
+		}
 
 		&__inner-realestate {
 			display: flex;
@@ -532,7 +542,7 @@
 				}
 
 				@include is-sp {
-					padding-left: 0
+					padding-left: 0;
 				}
 
 				.txt_ttl {
@@ -545,7 +555,7 @@
 				}
 
 				.text {
-					font-family: yu-gothic-pr6n, sans-serif;;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -568,7 +578,7 @@
 					position: absolute;
 					top: 50%;
 					left: 50%;
-					transform: translate(-50%, - 50%);
+					transform: translate(-50%, -50%);
 					width: 125px;
 					display: block;
 					text-align: center;
@@ -779,7 +789,7 @@
 			}
 
 			.text {
-				font-family: yu-gothic-pr6n, sans-serif;;
+				font-family: yu-gothic-pr6n, sans-serif;
 				font-weight: 500;
 				@include font-line(13, 26);
 				text-align: left;
@@ -870,7 +880,7 @@
 			position: absolute;
 			left: 46%;
 			top: 5px;
-			opacity: 0.50;
+			opacity: 0.5;
 
 			@include is-sp {
 				width: 100px;
@@ -900,10 +910,9 @@
 			position: absolute;
 			left: 0;
 			bottom: 10%;
-			opacity: 0.50;
+			opacity: 0.5;
 
 			@include is-sp {
-
 				display: none;
 			}
 		}
@@ -993,7 +1002,7 @@
 				}
 
 				.text {
-					font-family: yu-gothic-pr6n, sans-serif;;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1056,7 +1065,8 @@
 				}
 			}
 
-			&--right {}
+			&--right {
+			}
 
 			.br-point {
 				display: block;
@@ -1071,7 +1081,6 @@
 					}
 				}
 			}
-
 		}
 	}
 
@@ -1081,7 +1090,7 @@
 		.c-buttonREP {
 			.txt {
 				letter-spacing: 0.2em;
-				font-size: 15px
+				font-size: 15px;
 			}
 		}
 
@@ -1200,7 +1209,7 @@
 				}
 
 				.text {
-					font-family: yu-gothic-pr6n, sans-serif;;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 					@include font-line(13, 26);
 					text-align: left;
@@ -1274,12 +1283,11 @@
 		padding-bottom: 33px;
 		background: linear-gradient(to right, #003782, #0059b6);
 
-		
-		.c-cards09-desc-ttl{
-			@include is-max(430px){
+		.c-cards09-desc-ttl {
+			@include is-max(430px) {
 				font-size: 4vw;
-				}
 			}
+		}
 
 		@include is-sp {
 			margin-top: 20px;
@@ -1297,7 +1305,7 @@
 			position: absolute;
 			left: 46%;
 			top: -12%;
-			opacity: 0.50;
+			opacity: 0.5;
 
 			@include is-max(1075px) {
 				left: 52%;
@@ -1316,7 +1324,7 @@
 			position: absolute;
 			left: 0;
 			top: 24%;
-			opacity: 0.50;
+			opacity: 0.5;
 
 			@include is-sp {
 				// width: 115px;
@@ -1358,7 +1366,6 @@
 			@include is-sp {
 				height: 30px;
 				bottom: -28px;
-				;
 			}
 		}
 
@@ -1413,7 +1420,6 @@
 			@include is-sp {
 				text-align: justify;
 				margin-bottom: 25px;
-
 			}
 		}
 
@@ -1423,7 +1429,8 @@
 			justify-content: space-between;
 			padding-bottom: 55px;
 
-			@include is-max(750px) {}
+			@include is-max(750px) {
+			}
 		}
 
 		.card_ttl {
@@ -1509,7 +1516,7 @@
 				}
 
 				&-desc {
-					font-family: yu-gothic-pr6n, sans-serif;;
+					font-family: yu-gothic-pr6n, sans-serif;
 					font-weight: 500;
 
 					@include font-line(13, 26);
@@ -1549,7 +1556,7 @@
 		padding-top: 70px;
 		background-color: #fff;
 
-		.xb{
+		.xb {
 			border-bottom: none;
 		}
 
@@ -1656,7 +1663,6 @@
 				display: none;
 			}
 		}
-
 
 		.Question,
 		.Answer {
@@ -1767,7 +1773,6 @@
 			display: none;
 		}
 	}
-
 
 	.point {
 		background-color: #fff;
