--- a/src/assets/scss/pages/_companyinformation.scss
+++ b/src/assets/scss/pages/_companyinformation.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	.c-banner {
 
-		background: linear-gradient(to right, #2079bd, #1e91d2);
+		background: linear-gradient(to right, #0059C4,  #000017);
 		padding: 0 0 80px 0;
 
 		@include is-max(400px) {
@@ -39,10 +39,36 @@
 	}
 
 	&__section_1 {
-		background: linear-gradient(to right, #003782, #0059b6);
+		position: relative;
+		background: linear-gradient(to right, #000017, #0059C4);
 		padding: 115px 0 100px 0;
 		margin-top: -100px;
 		clip-path: polygon(0 50px, 100% 0, 100% 100%, 0% 100%);
+
+		&::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 16%;
+            top: 0;
+            left: 0;
+            right: 0;
+            clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 18%, 0 0, 0 0);
+            background: linear-gradient(to right, #0059C6, #000017);
+            opacity: 0.4;
+            @include is-sp {
+                clip-path: polygon(
+					50% 0%,
+					100% 0,
+					100% 75%,
+					66% 100%,
+					0% 40%,
+					0% 0%,
+					0% 0%
+					);
+                height: 4.7%;
+            }
+        }
 
 		.clip-path {
 			padding: 100px 0 100px 0;
@@ -258,8 +284,8 @@
 							.tel{
 
 								a{
-									color: #FFFF00;
-									font-weight: 600;
+									color: #FFFFFF;
+									// font-weight: 600;
 								}
 							}
 
