--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -25,7 +25,7 @@
             }
 
             p {
-                
+
                 @include font-line(59);
                 font-family: century-gothic, sans-serif;
                 font-weight: 700;
@@ -84,7 +84,7 @@
 		width: 800px;
 		height: 250px;
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #0059C4,  #000017);
 		position: absolute;
 		top: 0;
 		right: 0%;
@@ -130,7 +130,7 @@
             @include font-line(12, 10);
             letter-spacing: 0.32em;
             color: #95C6E7;
-            
+
         }
     }
 
@@ -196,7 +196,7 @@
                 font-family: yu-mincho-pr6n, sans-serif;
                 padding: 20px 0;
                 letter-spacing: 0.5em;
-                
+
                 @include is-max (1064px){
                     white-space: nowrap;
                 }
@@ -698,7 +698,7 @@
 
                     }
 
-                   
+
                 }
 
                 .img-sp {
